--- a/agent-store/pyproject.toml
+++ b/agent-store/pyproject.toml
@@ -2,7 +2,7 @@
 name = "agent-store"
 version = "0.1.0"
 requires-python = ">=3.14"
-dependencies = ["fastapi", "fastmcp", "httpx", "sqlmodel"]
+dependencies = ["fastapi", "fastmcp", "httpx", "sqlmodel", "elastic-apm"]
 
 [tool.server]
 host = "127.0.0.1"
