--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,12 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app",
-                "--reload"
+                "app.main:app",
+                "--reload",
+                "--host",
+                "127.0.0.1",
+                "--port",
+                "8002"
             ],
             "cwd": "${workspaceFolder}/agent-store",
             "jinja": true
@@ -22,8 +26,12 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app",
-                "--reload"
+                "app.main:app",
+                "--reload",
+                "--host",
+                "127.0.0.1",
+                "--port",
+                "8001"
             ],
             "cwd": "${workspaceFolder}/agent-engine",
             "jinja": true
