--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,60 @@ name: octobox-agentic
 services:
   ollama:
       image: ollama/ollama:latest
-      container_name: octobox-ollama
+      container_name: ollama
       restart: always
       ports:
         - "11434:11434"
       volumes:
-        - ollama_data:/root/.ollama
+        - octo_ollama_data:/root/.ollama
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.2.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - "9200:9200"
+    volumes:
+      - octo_es_data:/usr/share/elasticsearch/data
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:9.2.0
+    container_name: kibana
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+
+  apm-server:
+    image: docker.elastic.co/apm/apm-server:9.2.0
+    container_name: apm
+    depends_on:
+      - elasticsearch
+      - kibana
+    ports:
+      - "8200:8200"
+      - "4317:4317"
+      - "4318:4318"
+    environment:
+      - output.elasticsearch.hosts=["http://elasticsearch:9200"]
+      - apm-server.kibana.enabled=true
+      - apm-server.kibana.host=kibana:5601
+      - apm-server.otlp.enabled=true
+      - apm-server.otlp.protocols.grpc.endpoint=0.0.0.0:4317
+      - apm-server.otlp.protocols.http.endpoint=0.0.0.0:4318
+      - apm-server.host=0.0.0.0:8200
+      - apm-server.logging.level=info
+      - apm-server.auth.anonymous.enabled=true
 
 volumes:
-  ollama_data:
+  octo_ollama_data:
+  octo_es_data:
